--- a/index.html
+++ b/index.html
@@ -9,8 +9,25 @@
 </head>
 <body>
     
-    <div>
-        Andrew Daviau
+    <div id="top">
+        <h1>Andrew Daviau</h1>
+    </div>
+
+    <div class="wrapper">
+        <div id="projectbar">
+            <li class="menuitem">
+            Portfolio Project
+            </li>
+            <li class="menuitem">
+                Python Game Project
+            </li>
+            <li class="menuitem">
+                Nook Project
+            </li>
+            <li class="menuitem">
+                IFLE Project
+            </li>
+        </div>
     </div>
 
 </body>
