--- a/index.html
+++ b/index.html
@@ -16,16 +16,17 @@
     <div class="wrapper">
         <div id="projectbar">
             <li class="menuitem">
-            Portfolio Project
+            Nook ProjectPortfolio Project
             </li>
             <li class="menuitem">
-                Python Game Project
+                <a href="/gamesnook">Nook Project</a>
+                <a href="/gamedev">Python Game Project</a>
             </li>
             <li class="menuitem">
-                Nook Project
+                <a href="/gamesnook">Nook Project</a>
             </li>
             <li class="menuitem">
-                IFLE Project
+                <a href="/ifle">IFLE Project</a>
             </li>
         </div>
     </div>
