--- a/index.html
+++ b/index.html
@@ -16,10 +16,9 @@
     <div class="wrapper">
         <div id="projectbar">
             <li class="menuitem">
-            Nook ProjectPortfolio Project
+                <a href="/portfolio">Portfolio Project</a>
             </li>
             <li class="menuitem">
-                <a href="/gamesnook">Nook Project</a>
                 <a href="/gamedev">Python Game Project</a>
             </li>
             <li class="menuitem">
